style.css
html, body {
  height: 100%;
  width: 100%;
}
#home {
  background: url(images/zaku.jpg) no-repeat center center fixed;
  display: table;
  height: 100%;
  position: relative;
  width: 100%;
  background-size: cover;
}
.landing-text {
  display: table-cell;
  text-align: center;
  vertical-align: middle;

}
.landing-text h1 {
  font-size: 500%;
  font-weight: 700%;
}

